        Reviewed by Darin Adler.

https://bugs.webkit.org/show_bug.cgi?id=39089
        <rdar://problem/7974044> Domain names in Russian '.рф' domain are displayed as punycode

        Add a custom check for this domain. Currently, this is the only non-ASCII TLD, we'll
        investigate a more extensible solution when there are more, and we know what the
        typical restictions are.

        * Misc/WebNSURLExtras.mm:
        (allCharactersAllowedByTLDRules):
        (-[NSString _web_mapHostNameWithRange:encode:makeString:]):



Canonical link: https://commits.webkit.org/50580@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59391 268f45cc-cd09-0410-ab3c-d52691b4dbfc